--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,17 @@
+
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+*{
+    font-family: "Manrope", sans-serif;
+      font-optical-sizing: auto;
+       font-style: normal;
+         font-weight: 300;
+}
 
 @keyframes fadeInUp {
   0% {
@@ -24,4 +34,11 @@ input, textarea, select {
 @keyframes pulse {
   0%, 100% { transform: scale(1); }
   50% { transform: scale(1.1); }
+}
+
+ /* Font Awesome icons */
+i.fa-solid {
+    font-size: 1.125rem;
+    margin-right: 0.5rem;
+    color: #171717; 
 }
