--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,16 +1,27 @@
-
 @import '@fortawesome/fontawesome-free/css/all.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
-    font-family: "Manrope", sans-serif;
-      font-optical-sizing: auto;
-       font-style: normal;
-         font-weight: 300;
+* {
+  font-family: "Roboto Flex", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0,
+    "wdth" 100,
+    "GRAD" 0,
+    "XOPQ" 96,
+    "XTRA" 468,
+    "YOPQ" 79,
+    "YTAS" 750,
+    "YTDE" -203,
+    "YTFI" 738,
+    "YTLC" 514,
+    "YTUC" 712;
 }
 
 @keyframes fadeInUp {
@@ -18,27 +29,42 @@
     opacity: 0;
     transform: translateY(10px);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
+
 .fade-in-up {
   animation: fadeInUp 0.5s ease forwards;
 }
 
-input, textarea, select {
-    padding-left: 0.75rem; /* pl-3 */
-    padding-right: 0.75rem; /* pr-3 */
-}
-@keyframes pulse {
-  0%, 100% { transform: scale(1); }
-  50% { transform: scale(1.1); }
+input,
+textarea,
+select {
+  padding-left: 0.75rem;
+  /* pl-3 */
+  padding-right: 0.75rem;
+  /* pr-3 */
 }
 
- /* Font Awesome icons */
+@keyframes pulse {
+
+  0%,
+  100% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+}
+
+/* Font Awesome icons */
 i.fa-solid {
-    font-size: 1.125rem;
-    margin-right: 0.5rem;
-    color: #171717; 
+  font-size: 1rem;
+  margin-right: 0.3rem;
+  color: #1E293B;
+
 }
