--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -67,16 +67,111 @@ select {
 i.fa-solid {
   font-size: 1rem;
   margin-right: 0.3rem;
-  color: #1E293B;
+  color: #161414cc;
 
 }
+
 .favorite-btn {
-    cursor: pointer;
-    /* font-size: 16px; */
-    line-height: 1;
-    user-select: none;
-}
-.favorite-btn:hover {
-    background-color: #fee2e2; /* ανοιχτό κόκκινο */
+  cursor: pointer;
+  /* font-size: 16px; */
+  line-height: 1;
+  user-select: none;
 }
 
+.favorite-btn:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+
+/* button welcome */
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  min-width: 300px;
+  min-height: 50px;
+  display: inline-flex;
+  font-family: 'Nunito', sans-serif;
+  font-size: 18px;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #dbdbe7;
+  background: #564fd1;
+  background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px rgba(79, 209, 197, .64);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 10px;
+}
+
+.button::before {
+  content: '';
+  border-radius: 1000px;
+  min-width: calc(300px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 0 60px rgba(255, 255, 255, 0.15);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all .3s ease-in-out 0s;
+}
+
+.button:hover,
+.button:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+
+.button:hover::before,
+.button:focus::before {
+  opacity: 1;
+}
+
+.button::after {
+  content: '';
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 6px solid rgba(255, 255, 255, 0.2);
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
+}
+
+.button:hover::after,
+.button:focus::after {
+  animation: none;
+  display: none;
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
+}
