--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -48,7 +48,7 @@ select {
   /* pl-3 */
   padding-right: 0.75rem;
   /* pr-3 */
-  border: #080e17 2px solid;
+  /* border: #080e17 1px solid; */
 }
 
 @keyframes pulse {
